[gd_scene load_steps=28 format=2]

[ext_resource path="res://ArtPiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://Projector.gd" type="Script" id=2]
[ext_resource path="res://temp_textures/16-9_large.png" type="Texture" id=3]
[ext_resource path="res://videos/train.ogv" type="VideoStream" id=4]
[ext_resource path="res://textures/projector.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 19.5, 14 )

[sub_resource type="CircleShape2D" id=6]
resource_local_to_scene = true
radius = 96.0052

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 49, 9.25 )

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="VisualShaderNodeTexture" id=10]
source = 2

[sub_resource type="VisualShaderNodeScalarUniform" id=16]
uniform_name = "Brightness"

[sub_resource type="VisualShaderNodeVectorOp" id=17]
operator = 2

[sub_resource type="VisualShader" id=11]
code = "shader_type canvas_item;
render_mode blend_add;

uniform float Brightness;



void vertex() {
// Output:0

}

void fragment() {
// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out2p0 = _tex_read.rgb;
		n_out2p1 = _tex_read.a;
	}

// ScalarUniform:6
	float n_out6p0 = Brightness;

// VectorOp:7
	vec3 n_out7p0 = n_out2p0 * vec3(n_out6p0);

// Output:0
	COLOR.rgb = n_out7p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -694.899, 77.5718 )
mode = 1
modes/blend = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 10 )
nodes/fragment/2/position = Vector2( -180, 120 )
nodes/fragment/6/node = SubResource( 16 )
nodes/fragment/6/position = Vector2( -160, 280 )
nodes/fragment/7/node = SubResource( 17 )
nodes/fragment/7/position = Vector2( 160, 160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 7, 0, 6, 0, 7, 1, 7, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/Brightness = 0.7

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("ActualThing/Viewport")

[sub_resource type="VisualShaderNodeTextureUniform" id=75]
uniform_name = "Video"
texture_type = 1
color_default = 1

[sub_resource type="VisualShaderNodeExpression" id=76]
size = Vector2( 642, 434.8 )
expression = "float y_max = -uv.y * 0.5 + 1.0;
float y_min = uv.y * 0.5;
float uv_x = (uv.x - y_min) / (y_max - y_min);
uv_1 = vec3(uv_x, 0.0, 0.0);
uv_2 = vec3(uv_x, 0.4, 0.0);
uv_3 = vec3(uv_x, 0.8, 0.0);
float region = float(uv.x < y_max) * float(uv.x > y_min);
float x_gradient = pow(max(0.0, 1.0 - (abs(uv_x - 0.5) * 2.0)), 0.5);
float y_gradient = pow(uv.y, 1.5);
float y_cut = float(uv.y < y_cutoff);
alpha = region * y_gradient * x_gradient * y_cut * brightness;"

[sub_resource type="VisualShaderNodeTexture" id=77]
source = 5

[sub_resource type="VisualShaderNodeTexture" id=78]
source = 5

[sub_resource type="VisualShaderNodeTexture" id=79]
source = 5

[sub_resource type="VisualShaderNodeExpression" id=80]
size = Vector2( 564, 400 )
expression = "average = (texture_1 + texture_2 + texture_3) / 3.0 * alpha;"

[sub_resource type="VisualShaderNodeScalarUniform" id=81]
uniform_name = "brightness"

[sub_resource type="VisualShaderNodeInput" id=82]
input_name = "uv"

[sub_resource type="VisualShaderNodeScalarUniform" id=83]
uniform_name = "y_cutoff"

[sub_resource type="VisualShader" id=84]
code = "shader_type canvas_item;
render_mode blend_add;

uniform float brightness;
uniform float y_cutoff;
uniform sampler2D Video : hint_black_albedo;



void vertex() {
// Output:0

}

void fragment() {
// Input:2
	vec3 n_out2p0 = vec3(UV, 0.0);

// ScalarUniform:19
	float n_out19p0 = brightness;

// ScalarUniform:20
	float n_out20p0 = y_cutoff;

// Expression:12
	float n_out12p0;
	vec3 n_out12p1;
	vec3 n_out12p2;
	vec3 n_out12p3;
	n_out12p0 = 0.0;
	n_out12p1 = vec3(0.0, 0.0, 0.0);
	n_out12p2 = vec3(0.0, 0.0, 0.0);
	n_out12p3 = vec3(0.0, 0.0, 0.0);
	{
		float y_max = -n_out2p0.y * 0.5 + 1.0;
		float y_min = n_out2p0.y * 0.5;
		float uv_x = (n_out2p0.x - y_min) / (y_max - y_min);
		n_out12p1 = vec3(uv_x, 0.0, 0.0);
		n_out12p2 = vec3(uv_x, 0.4, 0.0);
		n_out12p3 = vec3(uv_x, 0.8, 0.0);
		float region = float(n_out2p0.x < y_max) * float(n_out2p0.x > y_min);
		float x_gradient = pow(max(0.0, 1.0 - (abs(uv_x - 0.5) * 2.0)), 0.5);
		float y_gradient = pow(n_out2p0.y, 1.5);
		float y_cut = float(n_out2p0.y < n_out20p0);
		n_out12p0 = region * y_gradient * x_gradient * y_cut * n_out19p0;
	}

// Texture:15
	vec3 n_out15p0;
	float n_out15p1;
	{
		vec4 Video_tex_read = texture(Video, n_out12p1.xy);
		n_out15p0 = Video_tex_read.rgb;
		n_out15p1 = Video_tex_read.a;
	}

// Texture:16
	vec3 n_out16p0;
	float n_out16p1;
	{
		vec4 Video_tex_read = texture(Video, n_out12p2.xy);
		n_out16p0 = Video_tex_read.rgb;
		n_out16p1 = Video_tex_read.a;
	}

// Texture:17
	vec3 n_out17p0;
	float n_out17p1;
	{
		vec4 Video_tex_read = texture(Video, n_out12p3.xy);
		n_out17p0 = Video_tex_read.rgb;
		n_out17p1 = Video_tex_read.a;
	}

// Expression:18
	vec3 n_out18p0;
	n_out18p0 = vec3(0.0, 0.0, 0.0);
	{
		n_out18p0 = (n_out15p0 + n_out16p0 + n_out17p0) / 3.0 * n_out12p0;
	}

// Output:0
	COLOR.rgb = n_out18p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -702.166, 115.365 )
mode = 1
modes/blend = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1400, 120 )
nodes/fragment/2/node = SubResource( 82 )
nodes/fragment/2/position = Vector2( -540, 240 )
nodes/fragment/11/node = SubResource( 75 )
nodes/fragment/11/position = Vector2( 180, -20 )
nodes/fragment/12/node = SubResource( 76 )
nodes/fragment/12/position = Vector2( -260, 220 )
nodes/fragment/12/size = Vector2( 642, 434.8 )
nodes/fragment/12/input_ports = "0,1,uv;1,0,brightness;2,0,y_cutoff;"
nodes/fragment/12/output_ports = "0,0,alpha;1,1,uv_1;2,1,uv_2;3,1,uv_3;"
nodes/fragment/12/expression = "float y_max = -uv.y * 0.5 + 1.0;
float y_min = uv.y * 0.5;
float uv_x = (uv.x - y_min) / (y_max - y_min);
uv_1 = vec3(uv_x, 0.0, 0.0);
uv_2 = vec3(uv_x, 0.4, 0.0);
uv_3 = vec3(uv_x, 0.8, 0.0);
float region = float(uv.x < y_max) * float(uv.x > y_min);
float x_gradient = pow(max(0.0, 1.0 - (abs(uv_x - 0.5) * 2.0)), 0.5);
float y_gradient = pow(uv.y, 1.5);
float y_cut = float(uv.y < y_cutoff);
alpha = region * y_gradient * x_gradient * y_cut * brightness;"
nodes/fragment/15/node = SubResource( 77 )
nodes/fragment/15/position = Vector2( 480, 60 )
nodes/fragment/16/node = SubResource( 78 )
nodes/fragment/16/position = Vector2( 480, 200 )
nodes/fragment/17/node = SubResource( 79 )
nodes/fragment/17/position = Vector2( 480, 340 )
nodes/fragment/18/node = SubResource( 80 )
nodes/fragment/18/position = Vector2( 700, 80 )
nodes/fragment/18/size = Vector2( 564, 400 )
nodes/fragment/18/input_ports = "0,1,texture_1;1,1,texture_2;2,1,texture_3;3,0,alpha;"
nodes/fragment/18/output_ports = "0,1,average;"
nodes/fragment/18/expression = "average = (texture_1 + texture_2 + texture_3) / 3.0 * alpha;"
nodes/fragment/19/node = SubResource( 81 )
nodes/fragment/19/position = Vector2( -540, 60 )
nodes/fragment/20/node = SubResource( 83 )
nodes/fragment/20/position = Vector2( -540, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 12, 0, 11, 2, 15, 2, 12, 1, 15, 0, 12, 2, 16, 0, 12, 3, 17, 0, 11, 2, 16, 2, 11, 2, 17, 2, 15, 0, 18, 0, 16, 0, 18, 1, 17, 0, 18, 2, 12, 0, 18, 3, 18, 0, 0, 0, 20, 0, 12, 2, 19, 0, 12, 1 )

[sub_resource type="ViewportTexture" id=32]
viewport_path = NodePath("ActualThing/Viewport")

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = SubResource( 84 )
shader_param/brightness = 1.0
shader_param/y_cutoff = 0.97
shader_param/Video = SubResource( 32 )

[node name="Projector" instance=ExtResource( 1 )]

[node name="StaticCollision" parent="." index="0"]
position = Vector2( 7.5, 129 )
shape = SubResource( 5 )

[node name="CollisionShape2D" parent="EventTriggerArea" index="0"]
position = Vector2( 0, 63 )
shape = SubResource( 6 )

[node name="CollisionShape2D" parent="PanelTriggerArea" index="0"]
position = Vector2( 0, 9 )
shape = SubResource( 7 )

[node name="ActualThing" parent="." index="3"]
z_index = 1
script = ExtResource( 2 )
dim_color = Color( 0.494118, 0.494118, 0.494118, 1 )

[node name="Viewport" type="Viewport" parent="ActualThing" index="0"]
size = Vector2( 160, 90 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="VideoPlayer" type="VideoPlayer" parent="ActualThing/Viewport" index="0"]
material = SubResource( 8 )
margin_right = 160.0
margin_bottom = 100.0
stream = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Sprite" parent="ActualThing" index="1"]
material = SubResource( 12 )
position = Vector2( -80, -110 )
z_as_relative = false
texture = SubResource( 9 )
centered = false

[node name="Temp" type="Sprite" parent="ActualThing" index="2"]
position = Vector2( 0, -65 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="ProjectorLight" type="ColorRect" parent="ActualThing" index="3"]
material = SubResource( 20 )
margin_left = -80.0
margin_top = -20.0
margin_right = 80.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projector" type="Sprite" parent="ActualThing" index="4"]
light_mask = 2
position = Vector2( -10, 116 )
z_as_relative = false
texture = ExtResource( 5 )
centered = false

[connection signal="body_entered" from="EventTriggerArea" to="ActualThing" method="_on_EventTriggerArea_body_entered"]
[connection signal="body_exited" from="EventTriggerArea" to="ActualThing" method="_on_EventTriggerArea_body_exited"]
[connection signal="finished" from="ActualThing/Viewport/VideoPlayer" to="ActualThing" method="_on_VideoPlayer_finished"]
